# m4tr1x-node

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUSH_TO_GITHUB.ps1  README.it.md  README.md  SECURITY.md  TAURI_SETUP.md  main.js  package-lock.json  package.json  preload.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  node_operator.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  NODE_OPERATOR.md  ORACLE_CLOUD.md  TOKENOMICS.md
docs/design/: M4TR1X Redesign.dc.html
frontend/: admin.html  auth.html  comfort.css  design.css  explorer.html  index.html  loading.html  m4tr1x.css  redesign-theme.css  safety.html
head-server/: .gitignore  head_server.js  package.json
scripts/: backup.sh  cloud-init-oracle.yml  doublespend-test.js  install-node.sh  mesh-test.js  mitigations-test.js  monitor.sh  patch_head_server.js  session-guard-test.js  smoke-test.js
server/: ai_detector.js  badges.js  core.js  crowdtrain.js  db.js  db_backup.js  federation.js  funkwhale.js  h8coin.js  h8identity.js  h8shop.js  h8token.js  h8wallet.js  heartbeat.js  index.js  ledger_sync.js  livestream.js  mastodon.js  model_updater.js  node_manager.js  nostr-verify.js  nostr.js  p2p.js  package-lock.json  package.json  peertube.js  photo.js  relay.js  relay_mesh.js  session_guard.js  shop.js  story.js  universal_post.js  video_host.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
tests/: test-h8identity-changepw.js  test-h8token-verify.js  test-nostr-encryption.js  test-relay-sig.js
web-preview/: index.html
(+6 files in other folders)
