[package]
name    = "m4tr1x"
version = "2.0.0"
edition = "2021"
description = "M4TR1X — The Unfiltered Eye. Decentralized social network for authentic video documentation."
authors = ["H8dboy"]
license = "MIT"

# Required by Tauri to detect the lib crate
[lib]
name       = "m4tr1x_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["devtools"] }
tauri-plugin-shell  = "2"        # launch Express server + system browser
tauri-plugin-fs     = "2"        # file system access (video upload, models)
tauri-plugin-dialog = "2"        # native file pickers
tauri-plugin-http   = "2"        # HTTP client (for relays, IPFS)
tauri-plugin-os     = "2"        # platform detection (desktop vs mobile)
tauri-plugin-process = "2"       # app version, exit
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
